Add items to opposite array

--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <form id="headForm" action="/" method="post">
+      <form id="headForm" action="/add" method="post">
         <input type="text" name="task" value="" placeholder="What do you need todo?">
         <button type="submit" name="button">Add Task</button>
       </form>
