--- a/views/list.mustache
+++ b/views/list.mustache
@@ -1,10 +1,29 @@
-{{#todoList}}
-  <ul>
-    {{#done}}
-      <li><del>{{task}}</del></li>
-    {{/done}}
-    {{^done}}
-      <li>{{task}}</li>
-    {{/done}}
-  </ul>
-{{/todoList}}
+<h2>Todo</h2>
+<ul>
+  {{#todo}}
+    <li>
+      <form class="" action="/done" method="post">
+        <button type="submit" name="task" value="{{.}}">&#10003;</button>
+        {{.}}
+      </form>
+    </li>
+  {{/todo}}
+  {{^todo}}
+    <li>You're all done!</li>
+  {{/todo}}
+</ul>
+<hr>
+<h2>Completed</h2>
+<ul>
+  {{#done}}
+    <li>
+      <form class="" action="/todo" method="post">
+        <button type="submit" name="task" value="{{.}}">&#10003;</button>
+        {{.}}
+      </form>      
+    </li>
+  {{/done}}
+  {{^done}}
+    <li>Keep working!</li>
+  {{/done}}
+</ul>
