--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -8,8 +8,9 @@
   <body>
     <div class="container">
       <header>
+        <h1>Your To-do List</h1>
         <form id="headForm" action="/add" method="post">
-          <input type="text" name="task" value="" placeholder="What do you need todo?">
+          <input type="text" name="task" value="" placeholder="What do you need to-do?">
           <button type="submit" name="button">Add Task</button>
         </form>
       </header>
