Add strikethrough to done items

--- a/views/list.mustache
+++ b/views/list.mustache
@@ -28,7 +28,7 @@
           <button class="checkbox checked" type="submit" name="task" value="{{.}}">&#10003;</button>
         </form>
       </td>
-      <td>{{.}}</td>
+      <td><del>{{.}}</del></td>
     </tr>
     {{/done}}
     {{^done}}
